@@ -6,3 +6,4 @@ Makefile.PL
 MANIFEST
 README.md
 t/base.t
+perl-Geo-Spline.spec
