@@ -1,0 +1,56 @@
+Name:           perl-Geo-Spline
+Version:        0.17
+Release:        1%{?dist}
+Summary:        Calculate geographic locations between GPS fixes
+License:        GPL+ or Artistic
+Group:          Development/Libraries
+URL:            http://search.cpan.org/dist/Geo-Spline/
+Source0:        http://www.cpan.org/modules/by-module/Geo/Geo-Spline-%{version}.tar.gz
+BuildRoot:      %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
+BuildArch:      noarch
+BuildRequires:  perl(ExtUtils::MakeMaker)
+BuildRequires:  perl(Geo::Constants) >= 0.04
+BuildRequires:  perl(Geo::Ellipsoids) >= 0.09
+BuildRequires:  perl(Geo::Functions) >= 0.03
+BuildRequires:  perl(Test::Simple) >= 0.44
+Requires:       perl(Geo::Constants) >= 0.04
+Requires:       perl(Geo::Ellipsoids) >= 0.09
+Requires:       perl(Geo::Functions) >= 0.03
+Requires:       perl(:MODULE_COMPAT_%(eval "`%{__perl} -V:version`"; echo $version))
+
+%description
+This program was developed to be able to calculate the position between two
+GPS fixes using a 2-dimensional 3rd order polynomial spline.
+
+%prep
+%setup -q -n Geo-Spline-%{version}
+
+%build
+%{__perl} Makefile.PL INSTALLDIRS=vendor
+make %{?_smp_mflags}
+
+%install
+rm -rf $RPM_BUILD_ROOT
+
+make pure_install PERL_INSTALL_ROOT=$RPM_BUILD_ROOT
+
+find $RPM_BUILD_ROOT -type f -name .packlist -exec rm -f {} \;
+find $RPM_BUILD_ROOT -depth -type d -exec rmdir {} 2>/dev/null \;
+
+%{_fixperms} $RPM_BUILD_ROOT/*
+
+%check
+make test
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files
+%defattr(-,root,root,-)
+%doc Changes LICENSE README.md
+%{perl_vendorlib}/*
+%{_mandir}/man3/*
+
+%changelog
+* Sun Jan 12 2025 Michael R. Davis <mrdvt92@yahoo.com> 0.17-1
+- Specfile autogenerated by cpanspec 1.78.
